[0.1.0]
- Updated VisUI to 1.2.4
- Added application icon
- Parts of the editor are now written in Kotlin
- New zero-runtime-cost dependency injection (https://github.com/czyzby/ktx/tree/master/inject)
- Changed meta file serialization format to json
- Performance improvements

[0.0.9] ~ 18/10/2016
- Updated libGDX to 1.9.4
- Updated VisUI to 1.2.3
- Updated Kryo to 4.0.0
- Updated the editor module to Java 8
- Fixed window size bug on mac: https://github.com/mbrlabs/Mundus/issues/11
- Darker ui colors
- Added the IntelliJ-like "docker bar" at the bottom
- Removed the models tab on the left and put it into the docker bar
- Improved logging
- Fixed expanding of the game object tree in the outline if the scene graph has been modified (https://github.com/mbrlabs/Mundus/issues/8)
- Implemented game object renaming in the outline
- Implemented duplicate game object (deep copy), terrainAsset can not be duplicated
- Implemented delete game object undo/redo command
- Fixed parenting in outline. Now local position is correctly calculated
- Implemented Scale Tool (with undo/redo)
- Implemented a brand-new, super awesome asset management system based on meta files
- Implemented a material system for models
- Added standard assets to each new project
- Added a "save and exit" option to the exit dialog

[0.0.8] ~ 23/06/2016
- Updated libGDX to 1.9.3
- Updated VisUI to 1.1.1
- Added an option to the settings dialog to change the keyboard layout
- Added a height map loader to the terrainAsset component widget in the inspector
- Implemented a Blender-like rotation tool
- Toast messages at top right corner of the screen
- Huge internal refactoring
- Ctrl+S shortcut for saving the project
- Fixed crash on MacOS: https://github.com/mbrlabs/Mundus/commit/fdd193caa7b75e5a1607f448c1f81d1faeec86dd
- Added a confirm dialog when exiting the editor
- Reimplemented the scene graph
- Added perlin noise for terrains

[0.0.7] ~ 28/02/2016
- Implemented a undo/redo system for most operations