@@ -5,6 +5,7 @@
 - New zero-runtime-cost dependency injection (https://github.com/czyzby/ktx/tree/master/inject)
 - Changed meta file serialization format to json
 - Performance improvements
+- Implemented a async project exporter
 
 [0.0.9] ~ 18/10/2016
 - Updated libGDX to 1.9.4
